--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ html, body, #root{
     overflow-x: hidden;
     background-color: rgb(18, 18, 228);
     color:white;
+    background-image: url('');
 }
 
 input, a, button:focus{
